
syntax = "proto3";

//import "google/protobuf/timestamp.proto";
//import "google/protobuf/any.proto";
import "google/protobuf/wrappers.proto";

//-------------------------------- Message Definitions ----------------------------------------------//

message DevicesCreationRequest {
    google.protobuf.StringValue tenant_id = 1;
    google.protobuf.StringValue model = 2;
    google.protobuf.StringValue number_devices = 3;

}

message DevicesDataSimulationRequest {
    google.protobuf.StringValue tenant_id = 1;
    google.protobuf.StringValue serial_number = 2;
    google.protobuf.StringValue event_type = 3;
    google.protobuf.StringValue number_devices = 4;

}
message DeviceSimulationResponse {
    google.protobuf.BoolValue simulation_succed = 1;
    google.protobuf.StringValue detailed_message = 2;
}

//----------------------------------------

service DeviceTwinService {
    rpc CreateDeviceSimulated (DevicesCreationRequest) returns (DeviceSimulationResponse) {
    }
    rpc SendDataToDevice(DevicesCreationRequest) returns (DeviceSimulationResponse) {
    }
}